--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,6 +1,6 @@
-// #swiper {
-//     width: 800px;
-//     height: 100px;
-//     background-color: hotpink;
-//     color: #000;
-//   }
+#swiper {
+  width: 800px;
+  height: 100px;
+  background-color: hotpink;
+  color: #000;
+}
